mobile overflow fix

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,13 +7,16 @@
 @import "services/_services.scss";
 @import "mentions/_mentions.scss";
 
+html, body{
+	overflow-x: hidden !important;
+}
+
 body{
 	margin: 0;
 	padding: 0;
 	background: #ffffff;
 	color: $textColor;
 	font-family: 'Open Sans', sans-serif;
-	overflow-x: hidden;
 }
 
 .clearBoth{
