--- a/styles/style.css
+++ b/styles/style.css
@@ -577,13 +577,16 @@ main.mentions p {
   font-size: 12px;
 }
 
+html, body {
+  overflow-x: hidden !important;
+}
+
 body {
   margin: 0;
   padding: 0;
   background: #ffffff;
   color: #212121;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
 }
 
 .clearBoth {
